--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,16 +12,13 @@
       <li class="nav-item">
         <a class="nav-link">Messages</a>
       </li>
-      <li class="nav-item" (click)="logout()">
-        <a class="nav-link">Logout</a>
-      </li>
     </ul>
 
-    <div class="dropdow" *ngIf="loggedIn">
-      <a href="" class="dropdown-toggle text-light">Welcome user</a>
-      <div class="dropdown-menu">
+    <div class="dropdow" *ngIf="loggedIn" dropdown>
+      <a href="" class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome user</a>
+      <div class="dropdown-menu" *dropdownMenu=>
         <a class="dropdown-item">Edit Profile</a>
-        <a class="dropdown-item" (click)="logout()">Logout</a>
+        <a class="dropdown-item" (click)="logout()" >Logout</a>
       </div>
     </div>
 
