--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <a class="navbar-brand" href="#">Dating App</a>
 
-    <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
+    <ul
+      class="navbar-nav me-auto mb-2 mb-md-0"
+      *ngIf="accountService.currentUser$ | async"
+    >
       <li class="nav-item">
         <a class="nav-link" href="#">Matches</a>
       </li>
@@ -14,15 +17,18 @@
       </li>
     </ul>
 
-    <div class="dropdow" *ngIf="accountService.currentUser$ | async" dropdown>
-      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome user</a>
-      <div class="dropdown-menu" *dropdownMenu=>
+    <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+      <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle
+        >Welcome user</a
+      >
+      <div class="dropdown-menu" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
-        <a class="dropdown-item" (click)="logout()" >Logout</a>
+        <a class="dropdown-item" (click)="logout()">Logout</a>
       </div>
     </div>
 
-    <form *ngIf="!(accountService.currentUser$ | async)"
+    <form
+      *ngIf="!(accountService.currentUser$ | async)"
       #loginForm="ngForm"
       class="d-flex"
       (ngSubmit)="login()"
@@ -34,14 +40,14 @@
         class="form-control me-2"
         type="text"
         placeholder="Username"
-      >
+      />
       <input
         name="password"
         [(ngModel)]="model.password"
         class="form-control me-2"
         type="password"
         placeholder="Password"
-      >
+      />
       <button class="btn btn-outline-success" type="submit">Login</button>
     </form>
   </div>
