--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -17,11 +17,11 @@
         </div>
         <div>
           <strong>Last active:</strong>
-          <p>{{ member.lastActive + 'Z'| timeago }}</p>
+          <p>{{ member.lastActive + "Z" | timeago }}</p>
         </div>
         <div>
           <strong>Member since:</strong>
-          <p>{{ member.created | date: 'dd MMM yyyy' }}</p>
+          <p>{{ member.created | date : "dd MMM yyyy" }}</p>
         </div>
       </div>
       <div class="card-footer">
@@ -53,7 +53,7 @@
         ></gallery>
       </tab>
       <tab heading="Messages">
-        <p>Messages will go here</p>
+        <app-member-messages [username]="member.userName"></app-member-messages>
       </tab>
     </tabset>
   </div>
