--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
   <div class="col-4">
     <div class="card">
       <img
@@ -27,7 +27,9 @@
       <div class="card-footer">
         <div class="btn-group d-flex">
           <button class="btn btn-primary">Like</button>
-          <button class="btn btn-success">Messages</button>
+          <button (click)="selectTeb('Messages')" class="btn btn-success">
+            Messages
+          </button>
         </div>
       </div>
     </div>
@@ -35,7 +37,10 @@
 
   <div class="col-8">
     <tabset class="member-tabset" #memberTabs>
-      <tab heading="About {{ member.knownAs }}" (selectTab)="onTabActivated($event)">
+      <tab
+        heading="About {{ member.knownAs }}"
+        (selectTab)="onTabActivated($event)"
+      >
         <h4>Description</h4>
         <p>{{ member.introduction }}</p>
         <h4>Looking for</h4>
@@ -45,7 +50,11 @@
         <h4>Interests</h4>
         <p>{{ member.interests }}</p>
       </tab>
-      <tab heading="Photos" #photoTab="tab" (selectTab)="onTabActivated($event)">
+      <tab
+        heading="Photos"
+        #photoTab="tab"
+        (selectTab)="onTabActivated($event)"
+      >
         <gallery
           *ngIf="photoTab.active"
           [items]="images"
@@ -53,7 +62,10 @@
         ></gallery>
       </tab>
       <tab heading="Messages" (selectTab)="onTabActivated($event)">
-        <app-member-messages [username]="member.userName" [messages]="messages"></app-member-messages>
+        <app-member-messages
+          [username]="member.userName"
+          [messages]="messages"
+        ></app-member-messages>
       </tab>
     </tabset>
   </div>
