Error fixed in "member-messages.component.html".

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -30,7 +30,7 @@
                 <span
                   class="text-success"
                   *ngIf="
-                    !message.dateRead && message.senderUsername !== username
+                    message.dateRead && message.senderUsername !== username
                   "
                   >(read {{ message.dateRead + "Z" | timeago }})</span
                 >
