"AutoMapperProfiles" class - two maps added. "member-detail.component.html" - code updated. "member-edit.component.html" - code updated. "member-messages.component.html" - code updated.

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -21,7 +21,7 @@
             <div class="header">
               <small class="text-muted">
                 <span class="fa fa-clock-o">{{
-                  message.messageSent + "Z" | timeago
+                  message.messageSent | timeago
                 }}</span>
                 <span
                   class="text-danger"
@@ -35,7 +35,7 @@
                   *ngIf="
                     message.dateRead && message.senderUsername !== username
                   "
-                  >(read {{ message.dateRead + "Z" | timeago }})</span
+                  >(read {{ message.dateRead | timeago }})</span
                 >
               </small>
             </div>
